--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -23,10 +23,10 @@
 
 <body>
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="--bs-primary: #a0c191;--bs-primary-rgb: 160,193,145;background: #1f1f1f;">
-        <div class="container"><a class="navbar-brand logo" href="about-me.html">Kaif Shaikh</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="index.html">Kaif Shaikh</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="about-me.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">About Me</a></li>
                     <li class="nav-item"><a class="nav-link active" href="curriculum-vitae.html">Resume</a></li>
                 </ul>
             </div>
@@ -42,11 +42,20 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
+                                <h3><strong><span style="color: rgba(0, 0, 0, 0.9);">Research Assistant</span></strong></h3><span class="badge rounded-pill bg-primary" style="transform: scale(1);">Indian School of Business</span>
+                            </div>
+                            <div class="col-md-6"><span class="text-muted period">Aug 2023 — Present</span></div>
+                        </div>
+                        <p><strong>• Developed NLP Classifier Models on a daily basis, achieving high accuracy rates exceeding 95%, demonstrating strong data analysis and modeling skills.</strong><br><strong>• Expertly finetuned large transformer models, attaining precision and reliability, resulting in improved model performance and efficiency.</strong><br><strong>• Created Transformer models for Sequence Classification, Sequence Generation, and Token Classification on a daily basis, showcasing consistent innovation and adaptability.</strong><br><strong>• Specialized in developing customized Named Entity Recognition (NER) solutions, optimizing data extraction and information retrieval processes.</strong><br><strong>• Proficiently worked with Big Data to analyze patterns and successfully deployed developed models, contributing to data-driven insights and decision-making.</strong></p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
                                 <h3>AWS &amp; Machine Learning Intern</h3><span class="badge rounded-pill bg-primary">F13 Technologies</span>
                             </div>
                             <div class="col-md-6"><span class="text-muted period">Mar 2023 — Jun 2023</span></div>
                         </div>
-                        <p>• As an AWS and ML intern, developed and deployed NLP models on AWS cloud.<br>• Utilized AWS EC2 to optimize model training and evaluation, resulting in 30% faster processing time.<br>• Leveraged AWS Lambda to automate data preprocessing tasks, increasing efficiency by 40%.<br>• Built and maintained AWS DynamoDB databases to store and retrieve large volumes of text data.</p>
+                        <p><span style="color: rgba(0, 0, 0, 0.9);">• Worked with AWS EC2, EBS, and S3 to host and develop websites.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Successfully migrated non-AWS web applications to AWS infrastructure.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Developed a sophisticated Content Recommendation system using AWS Personalize.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Gained hands-on experience with over 50 AWS services during the training period.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Proficient in utilizing tools like AWS Cost Calculator to optimize cloud resources.</span></p>
                     </div>
                     <div class="item">
                         <div class="row">
@@ -125,7 +134,7 @@
                         <div class="col-md-6">
                             <div class="border rounded border-0 contact-info portfolio-info-card">
                                 <h2>Tools &amp; Technologies</h2>
-                                <p>Machine Learning (TensorFlow &amp; PyTorch), NLP, Computer Vision, Power BI &amp; MongoDB</p>
+                                <p>Machine Learning (Transformers, TensorFlow &amp; PyTorch), NLP, Computer Vision, Power BI &amp; MongoDB</p>
                             </div>
                         </div>
                     </div>
