--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Projects - Brand</title>
+    <title>Kaif Shaikh | AI Researcher</title>
     <meta property="og:type" content="website">
     <meta name="description" content="This website contains Kaif's all personal accomplishments like his Publications and Projects. The website also contains all the blogs written as well as his Curriculum Vitae.">
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "Kaif Shaikh | AI Researcher",
+            "url": "https://kaifshaikh.com"
+        }
+    </script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
@@ -26,61 +34,22 @@
         <div class="container"><a class="navbar-brand logo" href="index.html">Kaif Shaikh</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">About Me</a></li>
                     <li class="nav-item"><a class="nav-link" href="curriculum-vitae.html">Resume</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="page projets-page">
-        <section class="portfolio-block project-no-images">
-            <div class="container">
-                <div class="heading">
-                    <h2>Publications | WIP</h2>
-                </div>
+    <main class="page lanidng-page">
+        <section class="portfolio-block block-intro" style="padding-top: 47px;">
+            <div class="container" style="margin-top: 100px;">
                 <div class="row">
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
-                            <div class="tags"><a href="#">Python</a></div>
-                        </div>
+                    <div class="col-md-6 col-xxl-6 text-bg-light flex-grow-1" style="padding-top: 22px;padding-bottom: 0px;margin-bottom: 0px;">
+                        <h1 style="font-size: 52.36px;font-weight: 900;text-align: left;margin-top: -1px;">Hey, I'm Kaif 👋</h1>
+                        <p style="font-size: 22px;margin-top: 12px;text-align: left;font-weight: bold;margin-bottom: 13px;"><span style="color: rgba(0, 0, 0, 0.9);">B. Tech CSE | AI Researcher | ML | DL | NLP | LLMs</span></p>
+                        <p style="font-size: 18px;margin-top: 12px;text-align: left;"><span style="color: rgb(28, 25, 23);">I am currently pursuing a Bachelor of Technology degree in Computer Science and Engineering at D.Y. Patil International University, specializing in the fascinating realm of AI.</span><br><br><span style="color: rgb(28, 25, 23);">I have a strong interest in various areas of machine learning and artificial intelligence, including natural language processing, deep learning, knowledge engineering, and large language models.</span><br><br><span style="color: rgb(28, 25, 23);">In my studies and independent projects, I actively work with state-of-the-art AI technologies to expand my expertise. I am particularly passionate about conducting research at the intersection of data-driven NLP, ethics in AI, computer vision, generative AI models, and data analytics.</span><br><br><span style="color: rgb(28, 25, 23);">I am always eager to tackle new challenges that combine my enthusiasm for technology with interdisciplinary collaboration. My goal is to conduct research that manifests theoretical ideas into practical tools with measurable impact. I believe bringing together diverse perspectives leads to truly transformative innovation.</span><br><br></p>
                     </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
-                            <div class="tags"><a href="#">JavaScript</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
-                            <div class="tags"><a href="#">CSS</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
-                            <div class="tags"><a href="#">Ruby</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
-                            <div class="tags"><a href="#">PHP</a></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="project-card-no-image">
-                            <h3>Lorem Ipsum</h3>
-                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
-                            <div class="tags"><a href="#">HTML</a></div>
-                        </div>
-                    </div>
+                    <div class="col-md-6 col-lg-6 offset-lg-0"><img class="rounded img-fluid border rounded-circle border-3 border-light" width="520" height="520" src="assets/img/main-assest/pfp.jpg" style="padding-top: 0px;transform: rotate(0deg) skew(0deg);margin-top: 77px;"></div>
                 </div>
             </div>
         </section>
