--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <path d="M18 8.1179L9.99995 12.1179L2 8.11796V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V8.1179Z" fill="currentColor"></path>
                     </svg></a><a class="me-3" href="https://kaifshaikhhhh.medium.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-medium">
                         <path d="M9.025 8c0 2.485-2.02 4.5-4.513 4.5A4.506 4.506 0 0 1 0 8c0-2.486 2.02-4.5 4.512-4.5A4.506 4.506 0 0 1 9.025 8zm4.95 0c0 2.34-1.01 4.236-2.256 4.236-1.246 0-2.256-1.897-2.256-4.236 0-2.34 1.01-4.236 2.256-4.236 1.246 0 2.256 1.897 2.256 4.236zM16 8c0 2.096-.355 3.795-.794 3.795-.438 0-.793-1.7-.793-3.795 0-2.096.355-3.795.794-3.795.438 0 .793 1.699.793 3.795z"></path>
-                    </svg></a><a class="me-3" href="https://www.linkedin.com/in/kaifshaikhhh/" target="_blank"><i class="icon ion-social-linkedin"></i></a><a class="me-3" href="https://github.com/kaifshaikhhhh" target="_blank"><i class="icon ion-social-github"></i></a></div>
+                    </svg></a><a class="me-3" href="https://www.linkedin.com/in/kaifshaikhhh/" target="_blank"><i class="icon ion-social-linkedin"></i></a><a class="me-3" href="https://github.com/kaifshaikhhhh" target="_blank"><i class="icon ion-social-github"></i></a><a class="me-3" href="https://twitter.com/kaif_research" target="_blank"><i class="icon ion-social-twitter"></i></a></div>
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
