--- a/index.html
+++ b/index.html
@@ -1,74 +1,236 @@
 <!DOCTYPE html>
 <html data-bs-theme="light">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>Kaif Shaikh | AI Researcher</title>
-    <meta property="og:type" content="website">
-    <meta name="description" content="This website contains Kaif's all personal accomplishments like his Publications and Projects. The website also contains all the blogs written as well as his Curriculum Vitae.">
+    <meta property="og:type" content="website" />
+    <meta
+      name="description"
+      content="This website contains Kaif's all personal accomplishments like his Publications and Projects. The website also contains all the blogs written as well as his Curriculum Vitae."
+    />
     <script type="application/ld+json">
-        {
-            "@context": "http://schema.org",
-            "@type": "WebSite",
-            "name": "Kaif Shaikh | AI Researcher",
-            "url": "https://kaifshaikh.com"
-        }
+      {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "Kaif Shaikh | AI Researcher",
+        "url": "https://kaifshaikh.com"
+      }
     </script>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
-    <link rel="stylesheet" href="assets/css/pikaday.min.css">
-</head>
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="180x180"
+      href="assets/img/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/img/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="180x180"
+      href="assets/img/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="assets/img/favicon/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="assets/img/favicon/android-chrome-512x512.png"
+    />
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter&amp;display=swap"
+    />
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
+    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css" />
+    <link rel="stylesheet" href="assets/css/pikaday.min.css" />
+  </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="--bs-primary: #a0c191;--bs-primary-rgb: 160,193,145;background: #1f1f1f;">
-        <div class="container"><a class="navbar-brand logo" href="index.html">Kaif Shaikh</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="curriculum-vitae.html">Resume</a></li>
-                </ul>
-            </div>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"
+      style="
+        --bs-primary: #a0c191;
+        --bs-primary-rgb: 160, 193, 145;
+        background: #1f1f1f;
+      "
+    >
+      <div class="container">
+        <a class="navbar-brand logo" href="index.html">Kaif Shaikh</a
+        ><button
+          data-bs-toggle="collapse"
+          class="navbar-toggler"
+          data-bs-target="#navbarNav"
+        >
+          <span class="visually-hidden">Toggle navigation</span
+          ><span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="curriculum-vitae.html">Resume</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <main class="page lanidng-page">
-        <section class="portfolio-block block-intro" style="padding-top: 47px;">
-            <div class="container" style="margin-top: 100px;">
-                <div class="row">
-                    <div class="col-md-6 col-xxl-6 text-bg-light flex-grow-1" style="padding-top: 22px;padding-bottom: 0px;margin-bottom: 0px;">
-                        <h1 style="font-size: 52.36px;font-weight: 900;text-align: left;margin-top: -1px;">Hey, I'm Kaif 👋</h1>
-                        <p style="font-size: 22px;margin-top: 12px;text-align: left;font-weight: bold;margin-bottom: 13px;"><span style="color: rgba(0, 0, 0, 0.9);">B. Tech CSE | AI Researcher | ML | DL | NLP | LLMs</span></p>
-                        <p style="font-size: 18px;margin-top: 12px;text-align: left;"><span style="color: rgb(28, 25, 23);">I am currently pursuing a Bachelor of Technology degree in Computer Science and Engineering at D.Y. Patil International University, specializing in the fascinating realm of AI.</span><br><br><span style="color: rgb(28, 25, 23);">I have a strong interest in various areas of machine learning and artificial intelligence, including natural language processing, deep learning, knowledge engineering, and large language models.</span><br><br><span style="color: rgb(28, 25, 23);">In my studies and independent projects, I actively work with state-of-the-art AI technologies to expand my expertise. I am particularly passionate about conducting research at the intersection of data-driven NLP, ethics in AI, computer vision, generative AI models, and data analytics.</span><br><br><span style="color: rgb(28, 25, 23);">I am always eager to tackle new challenges that combine my enthusiasm for technology with interdisciplinary collaboration. My goal is to conduct research that manifests theoretical ideas into practical tools with measurable impact. I believe bringing together diverse perspectives leads to truly transformative innovation.</span><br><br></p>
-                    </div>
-                    <div class="col-md-6 col-lg-6 offset-lg-0"><img class="rounded img-fluid border rounded-circle border-3 border-light" width="520" height="520" src="assets/img/main-assest/pfp.jpg" style="padding-top: 0px;transform: rotate(0deg) skew(0deg);margin-top: 77px;"></div>
-                </div>
+      <section class="portfolio-block block-intro" style="padding-top: 47px">
+        <div class="container" style="margin-top: 100px">
+          <div class="row">
+            <div
+              class="col-md-6 col-xxl-6 text-bg-light flex-grow-1"
+              style="padding-top: 22px; padding-bottom: 0px; margin-bottom: 0px"
+            >
+              <h1
+                style="
+                  font-size: 52.36px;
+                  font-weight: 900;
+                  text-align: left;
+                  margin-top: -1px;
+                "
+              >
+                Hey, I'm Kaif 👋
+              </h1>
+              <p
+                style="
+                  font-size: 22px;
+                  margin-top: 12px;
+                  text-align: left;
+                  font-weight: bold;
+                  margin-bottom: 13px;
+                "
+              >
+                <span style="color: rgba(0, 0, 0, 0.9)"
+                  >B. Tech CSE | AI Researcher | ML | DL | NLP | LLMs</span
+                >
+              </p>
+              <p style="font-size: 18px; margin-top: 12px; text-align: left">
+                <span style="color: rgb(28, 25, 23)"
+                  >I am currently pursuing a Bachelor of Technology degree in
+                  Computer Science and Engineering at D.Y. Patil International
+                  University, specializing in the fascinating realm of AI.</span
+                ><br /><br /><span style="color: rgb(28, 25, 23)"
+                  >I have a strong interest in various areas of machine learning
+                  and artificial intelligence, including natural language
+                  processing, deep learning, knowledge engineering, and large
+                  language models.</span
+                ><br /><br /><span style="color: rgb(28, 25, 23)"
+                  >In my studies and independent projects, I actively work with
+                  state-of-the-art AI technologies to expand my expertise. I am
+                  particularly passionate about conducting research at the
+                  intersection of data-driven NLP, ethics in AI, computer
+                  vision, generative AI models, and data analytics.</span
+                ><br /><br /><span style="color: rgb(28, 25, 23)"
+                  >I am always eager to tackle new challenges that combine my
+                  enthusiasm for technology with interdisciplinary
+                  collaboration. My goal is to conduct research that manifests
+                  theoretical ideas into practical tools with measurable impact.
+                  I believe bringing together diverse perspectives leads to
+                  truly transformative innovation.</span
+                ><br /><br />
+              </p>
             </div>
-        </section>
+            <div class="col-md-6 col-lg-6 offset-lg-0">
+              <img
+                class="rounded img-fluid border rounded-circle border-3 border-light"
+                width="520"
+                height="520"
+                src="assets/img/main-assest/pfp.jpg"
+                style="
+                  padding-top: 0px;
+                  transform: rotate(0deg) skew(0deg);
+                  margin-top: 77px;
+                "
+              />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="page-footer py-3 border-top">
-        <div class="container my-4">
-            <div class="links"><a target="_parent">Connect with Me!</a></div>
-            <div class="social-icons"><a class="me-3" href="mailto:kaifs0351@gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none">
-
-                        <path d="M2.00333 5.88355L9.99995 9.88186L17.9967 5.8835C17.9363 4.83315 17.0655 4 16 4H4C2.93452 4 2.06363 4.83318 2.00333 5.88355Z" fill="currentColor"></path>
-                        <path d="M18 8.1179L9.99995 12.1179L2 8.11796V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V8.1179Z" fill="currentColor"></path>
-                    </svg></a><a class="me-3" href="https://kaifshaikhhhh.medium.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-medium">
-                        <path d="M9.025 8c0 2.485-2.02 4.5-4.513 4.5A4.506 4.506 0 0 1 0 8c0-2.486 2.02-4.5 4.512-4.5A4.506 4.506 0 0 1 9.025 8zm4.95 0c0 2.34-1.01 4.236-2.256 4.236-1.246 0-2.256-1.897-2.256-4.236 0-2.34 1.01-4.236 2.256-4.236 1.246 0 2.256 1.897 2.256 4.236zM16 8c0 2.096-.355 3.795-.794 3.795-.438 0-.793-1.7-.793-3.795 0-2.096.355-3.795.794-3.795.438 0 .793 1.699.793 3.795z"></path>
-                    </svg></a><a class="me-3" href="https://www.linkedin.com/in/kaifshaikhhh/" target="_blank"><i class="icon ion-social-linkedin"></i></a><a class="me-3" href="https://github.com/kaifshaikhhhh" target="_blank"><i class="icon ion-social-github"></i></a><a class="me-3" href="https://twitter.com/kaif_research" target="_blank"><i class="icon ion-social-twitter"></i></a></div>
+      <div class="container my-4">
+        <div class="links"><a target="_parent">Connect with Me!</a></div>
+        <div class="social-icons">
+          <a class="me-3" href="mailto:kaifs0351@gmail.com" target="_blank"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="1em"
+              height="1em"
+              viewBox="0 0 20 20"
+              fill="none"
+            >
+              <path
+                d="M2.00333 5.88355L9.99995 9.88186L17.9967 5.8835C17.9363 4.83315 17.0655 4 16 4H4C2.93452 4 2.06363 4.83318 2.00333 5.88355Z"
+                fill="currentColor"
+              ></path>
+              <path
+                d="M18 8.1179L9.99995 12.1179L2 8.11796V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V8.1179Z"
+                fill="currentColor"
+              ></path></svg></a
+          ><a
+            class="me-3"
+            href="https://kaifshaikhhhh.medium.com/"
+            target="_blank"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="1em"
+              height="1em"
+              fill="currentColor"
+              viewBox="0 0 16 16"
+              class="bi bi-medium"
+            >
+              <path
+                d="M9.025 8c0 2.485-2.02 4.5-4.513 4.5A4.506 4.506 0 0 1 0 8c0-2.486 2.02-4.5 4.512-4.5A4.506 4.506 0 0 1 9.025 8zm4.95 0c0 2.34-1.01 4.236-2.256 4.236-1.246 0-2.256-1.897-2.256-4.236 0-2.34 1.01-4.236 2.256-4.236 1.246 0 2.256 1.897 2.256 4.236zM16 8c0 2.096-.355 3.795-.794 3.795-.438 0-.793-1.7-.793-3.795 0-2.096.355-3.795.794-3.795.438 0 .793 1.699.793 3.795z"
+              ></path></svg></a
+          ><a
+            class="me-3"
+            href="https://www.linkedin.com/in/kaifshaikhhh/"
+            target="_blank"
+            ><i class="icon ion-social-linkedin"></i></a
+          ><a
+            class="me-3"
+            href="https://github.com/kaifshaikhhhh"
+            target="_blank"
+            ><i class="icon ion-social-github"></i></a
+          ><a
+            class="me-3"
+            href="https://twitter.com/kaif_research"
+            target="_blank"
+            ><i class="icon ion-social-twitter"></i
+          ></a>
         </div>
+      </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
-</body>
-
+  </body>
 </html>
