--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 "
               >
                 <span style="color: rgba(0, 0, 0, 0.9)"
-                  >B. Tech CSE | AI Researcher | ML | DL | NLP | LLMs</span
+                  >Enhancing accessibility through #NLProc | B. Tech CSE</span
                 >
               </p>
               <p style="font-size: 18px; margin-top: 12px; text-align: left">
