--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -117,7 +117,7 @@
                   >
                 </div>
                 <div class="col-md-6">
-                  <span class="text-muted period">Aug 2023 — Present</span>
+                  <span class="text-muted period">Aug 2023 — Jan 2023</span>
                 </div>
               </div>
               <p>
