--- a/publications.html
+++ b/publications.html
@@ -1,220 +1,105 @@
 <!DOCTYPE html>
 <html data-bs-theme="light">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <title>Projects - Brand</title>
-    <meta property="og:type" content="website" />
-    <meta
-      name="description"
-      content="This website contains Kaif's all personal accomplishments like his Publications and Projects. The website also contains all the blogs written as well as his Curriculum Vitae."
-    />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      sizes="180x180"
-      href="assets/img/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/img/favicon/favicon-16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/img/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="180x180"
-      href="assets/img/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="assets/img/favicon/android-chrome-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="assets/img/favicon/android-chrome-512x512.png"
-    />
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Inter&amp;display=swap"
-    />
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css" />
-    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css" />
-    <link rel="stylesheet" href="assets/css/pikaday.min.css" />
-  </head>
 
-  <body>
-    <nav
-      class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"
-      style="
-        --bs-primary: #a0c191;
-        --bs-primary-rgb: 160, 193, 145;
-        background: #1f1f1f;
-      "
-    >
-      <div class="container">
-        <a class="navbar-brand logo" href="index.html">Kaif Shaikh</a
-        ><button
-          data-bs-toggle="collapse"
-          class="navbar-toggler"
-          data-bs-target="#navbarNav"
-        >
-          <span class="visually-hidden">Toggle navigation</span
-          ><span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="curriculum-vitae.html">Resume</a>
-            </li>
-          </ul>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Projects - Brand</title>
+    <meta property="og:type" content="website">
+    <meta name="description" content="This website contains Kaif's all personal accomplishments like his Publications and Projects. The website also contains all the blogs written as well as his Curriculum Vitae.">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter&amp;display=swap">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
+    <link rel="stylesheet" href="assets/css/pikaday.min.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="--bs-primary: #a0c191;--bs-primary-rgb: 160,193,145;background: #1f1f1f;">
+        <div class="container"><a class="navbar-brand logo" href="index.html">Kaif Shaikh</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="curriculum-vitae.html">Resume</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
     <main class="page projets-page">
-      <section class="portfolio-block project-no-images">
-        <div class="container">
-          <div class="heading">
-            <h2>Publications | WIP</h2>
-          </div>
-          <div class="row">
-            <div class="col-md-6 col-lg-4">
-              <div class="project-card-no-image">
-                <h3>Lorem Ipsum</h3>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <a class="btn btn-outline-primary btn-sm" role="button" href="#"
-                  >See More</a
-                >
-                <div class="tags"><a href="#">Python</a></div>
-              </div>
+        <section class="portfolio-block project-no-images">
+            <div class="container">
+                <div class="heading">
+                    <h2>Publications | WIP</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="project-card-no-image">
+                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <div class="tags"><a href="#">Python</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="project-card-no-image">
+                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <div class="tags"><a href="#">JavaScript</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="project-card-no-image">
+                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <div class="tags"><a href="#">CSS</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="project-card-no-image">
+                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <div class="tags"><a href="#">Ruby</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="project-card-no-image">
+                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <div class="tags"><a href="#">PHP</a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="project-card-no-image">
+                            <h3>Lorem Ipsum</h3>
+                            <h4>Lorem ipsum dolor sit amet</h4><a class="btn btn-outline-primary btn-sm" role="button" href="#">See More</a>
+                            <div class="tags"><a href="#">HTML</a></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="project-card-no-image">
-                <h3>Lorem Ipsum</h3>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <a class="btn btn-outline-primary btn-sm" role="button" href="#"
-                  >See More</a
-                >
-                <div class="tags"><a href="#">JavaScript</a></div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="project-card-no-image">
-                <h3>Lorem Ipsum</h3>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <a class="btn btn-outline-primary btn-sm" role="button" href="#"
-                  >See More</a
-                >
-                <div class="tags"><a href="#">CSS</a></div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="project-card-no-image">
-                <h3>Lorem Ipsum</h3>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <a class="btn btn-outline-primary btn-sm" role="button" href="#"
-                  >See More</a
-                >
-                <div class="tags"><a href="#">Ruby</a></div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="project-card-no-image">
-                <h3>Lorem Ipsum</h3>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <a class="btn btn-outline-primary btn-sm" role="button" href="#"
-                  >See More</a
-                >
-                <div class="tags"><a href="#">PHP</a></div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="project-card-no-image">
-                <h3>Lorem Ipsum</h3>
-                <h4>Lorem ipsum dolor sit amet</h4>
-                <a class="btn btn-outline-primary btn-sm" role="button" href="#"
-                  >See More</a
-                >
-                <div class="tags"><a href="#">HTML</a></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+        </section>
     </main>
     <footer class="page-footer py-3 border-top">
-      <div class="container my-4">
-        <div class="links"><a target="_parent">Connect with Me!</a></div>
-        <div class="social-icons">
-          <a class="me-3" href="mailto:kaifs0351@gmail.com" target="_blank"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="1em"
-              height="1em"
-              viewBox="0 0 20 20"
-              fill="none"
-            >
-              <path
-                d="M2.00333 5.88355L9.99995 9.88186L17.9967 5.8835C17.9363 4.83315 17.0655 4 16 4H4C2.93452 4 2.06363 4.83318 2.00333 5.88355Z"
-                fill="currentColor"
-              ></path>
-              <path
-                d="M18 8.1179L9.99995 12.1179L2 8.11796V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V8.1179Z"
-                fill="currentColor"
-              ></path></svg></a
-          ><a
-            class="me-3"
-            href="https://kaifshaikhhhh.medium.com/"
-            target="_blank"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="1em"
-              height="1em"
-              fill="currentColor"
-              viewBox="0 0 16 16"
-              class="bi bi-medium"
-            >
-              <path
-                d="M9.025 8c0 2.485-2.02 4.5-4.513 4.5A4.506 4.506 0 0 1 0 8c0-2.486 2.02-4.5 4.512-4.5A4.506 4.506 0 0 1 9.025 8zm4.95 0c0 2.34-1.01 4.236-2.256 4.236-1.246 0-2.256-1.897-2.256-4.236 0-2.34 1.01-4.236 2.256-4.236 1.246 0 2.256 1.897 2.256 4.236zM16 8c0 2.096-.355 3.795-.794 3.795-.438 0-.793-1.7-.793-3.795 0-2.096.355-3.795.794-3.795.438 0 .793 1.699.793 3.795z"
-              ></path></svg></a
-          ><a
-            class="me-3"
-            href="https://www.linkedin.com/in/kaifshaikhhh/"
-            target="_blank"
-            ><i class="icon ion-social-linkedin"></i></a
-          ><a
-            class="me-3"
-            href="https://github.com/kaifshaikhhhh"
-            target="_blank"
-            ><i class="icon ion-social-github"></i
-          ></a>
+        <div class="container my-4">
+            <div class="links"><a target="_parent">Connect with Me!</a></div>
+            <div class="social-icons"><a class="me-3" href="mailto:kaifs0351@gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none">
+
+                        <path d="M2.00333 5.88355L9.99995 9.88186L17.9967 5.8835C17.9363 4.83315 17.0655 4 16 4H4C2.93452 4 2.06363 4.83318 2.00333 5.88355Z" fill="currentColor"></path>
+                        <path d="M18 8.1179L9.99995 12.1179L2 8.11796V14C2 15.1046 2.89543 16 4 16H16C17.1046 16 18 15.1046 18 14V8.1179Z" fill="currentColor"></path>
+                    </svg></a><a class="me-3" href="https://kaifshaikhhhh.medium.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-medium">
+                        <path d="M9.025 8c0 2.485-2.02 4.5-4.513 4.5A4.506 4.506 0 0 1 0 8c0-2.486 2.02-4.5 4.512-4.5A4.506 4.506 0 0 1 9.025 8m4.95 0c0 2.34-1.01 4.236-2.256 4.236-1.246 0-2.256-1.897-2.256-4.236 0-2.34 1.01-4.236 2.256-4.236 1.246 0 2.256 1.897 2.256 4.236M16 8c0 2.096-.355 3.795-.794 3.795-.438 0-.793-1.7-.793-3.795 0-2.096.355-3.795.794-3.795.438 0 .793 1.699.793 3.795"></path>
+                    </svg></a><a class="me-3" href="https://www.linkedin.com/in/kaifshaikhhh/" target="_blank"><i class="icon ion-social-linkedin"></i></a><a class="me-3" href="https://github.com/kaifshaikhhhh" target="_blank"><i class="icon ion-social-github"></i></a><a class="me-3" href="https://twitter.com/kaif_research" target="_blank"><i class="icon ion-social-twitter"></i></a></div>
         </div>
-      </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
-  </body>
+</body>
+
 </html>
