--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -46,7 +46,7 @@
                             </div>
                             <div class="col-md-6"><span class="text-muted period">Jun 2024 — Present</span></div>
                         </div>
-                        <p><strong>•&nbsp;</strong>Topic of Research: Privacy Preserving Generation with Large Language Models.<br><strong>•&nbsp;</strong><span style="color: rgba(0, 0, 0, 0.9);">Enhancing security for Open-Source and Proprietary LLMs with Privacy based frameworks and efficient ML</span>&nbsp;techniques.</p>
+                        <p><span style="color: rgba(0, 0, 0, 0.9);">• Topic of Research: "Privacy Preserving Generation with Large Language Models"</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Researching on Private Large Language Models using various Differential Privacy Frameworks.</span><br><span style="color: rgba(0, 0, 0, 0.9);">• Analyzing several pre-training/fine-tuning methods and model behavior on various downstream tasks.</span></p>
                     </div>
                     <div class="item">
                         <div class="row">
