--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -35,6 +35,16 @@
     <main class="page cv-page">
         <section class="portfolio-block cv">
             <div class="container">
+                <div class="group">
+                    <div class="row d-xxl-flex justify-content-xxl-center" style="margin-top: 9px;">
+                        <div class="col-md-6 col-xl-12" style="text-align: center;">
+                            <div class="border rounded border-0 contact-info portfolio-info-card">
+                                <h2>Research Interests</h2>
+                                <p>Artificial Intelligence; Machine Learning; Natural Language Processing; Large Language Models; Human-Computer Interaction (HCI); Adversary Machine Learning; Interoperability</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="work-experience group">
                     <div class="heading">
                         <h2 class="text-center">Experience</h2>
@@ -87,7 +97,7 @@
                             </div>
                             <div class="col-6"><span class="text-muted period">Oct 2021 — 2025</span></div>
                         </div>
-                        <p><strong>List of courses: Data Structures, Design &amp; Analysis of Algorithms, Data Science, Intelligent Systems, Digital Signal Processing, MATLAB.</strong><br><br><strong>Clubs &amp; Co-Curriculars: TEDx Conferences, Google Development Students Club, Tech Cohorts and Hackathons.</strong></p>
+                        <p><strong>List of courses: Data Structures, Design &amp; Analysis of Algorithms, Principles of Data Science, Intelligent Systems, Digital Signal Processing, Deep Neural Networks, High Performance Computing &amp; Game Theory</strong><br><br><strong>Clubs &amp; Co-Curriculars: TEDx Conferences, Google Development Students Club, Tech Cohorts and Hackathons.</strong></p>
                     </div>
                 </div>
                 <div class="education group">
@@ -101,7 +111,7 @@
                             </div>
                             <div class="col-6"><span class="text-muted period">May 2023</span></div>
                         </div>
-                        <p>Otaku Engine is a content recommendation system for anime enthusiasts. It leverages machine learning techniques to provide personalized anime recommendations based on user interactions and ratings.</p>
+                        <p>Otaku Engine is a content recommendation system for anime enthusiasts (weebs). It leverages machine learning techniques to provide personalized anime recommendations based on user interactions and ratings.</p>
                     </div>
                     <div class="item">
                         <div class="row">
@@ -162,7 +172,7 @@
                         </div>
                     </div>
                     <div class="row d-xxl-flex justify-content-xxl-center" style="margin-top: 9px;">
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-xl-12" style="text-align: center;">
                             <div class="border rounded border-0 contact-info portfolio-info-card">
                                 <h2>Additional Design Tools&nbsp;</h2>
                                 <p>Adobe XD, Figma, Blender, Cinema 4D &amp; Unreal Engine</p>
