CV and Bio Update

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -40,7 +40,7 @@
                         <div class="col-md-6 col-xl-12" style="text-align: center;">
                             <div class="border rounded border-0 contact-info portfolio-info-card">
                                 <h2>Research Interests</h2>
-                                <p>Artificial Intelligence; Machine Learning; Natural Language Processing; Large Language Models; Human-Computer Interaction (HCI); Adversary Machine Learning; Interoperability</p>
+                                <p>Machine Learning; Natural Language Processing; AI Alignment; Large Language Models; Human-Computer Interaction (HCI); Adversary Machine Learning; Interpretability</p>
                             </div>
                         </div>
                     </div>
@@ -48,6 +48,15 @@
                 <div class="work-experience group">
                     <div class="heading">
                         <h2 class="text-center">Experience</h2>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3><strong><span style="color: rgba(0, 0, 0, 0.9);">Research Assistant</span></strong></h3><span class="badge rounded-pill bg-primary" style="transform: scale(1);">Indian School of Business</span>
+                            </div>
+                            <div class="col-md-6"><span class="text-muted period">Sep 2024 - Present</span></div>
+                        </div>
+                        <p>• Developing a custom NLP pipeline with Vision OCR, Text Classification and Token Classification models using Open LLMs.</p>
                     </div>
                     <div class="item">
                         <div class="row">
